--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,6 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
+Environment="PATH=__ENV_PATH__"
 ExecStart=__YNH_NODE__ index.js __PORT__
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
