--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -9,8 +9,7 @@ Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
 Environment="PATH=__ENV_PATH__"
 ExecStart=__YNH_NODE__ index.js __PORT__
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+Restart=always
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
